--- a/Employee_mvc_webapi/Web.config
+++ b/Employee_mvc_webapi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=PRI-PC\SQLEXPRESS;Initial Catalog=test100;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=PRI-PC\SQLEXPRESS;Initial Catalog=myapp;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
